--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ sonar.links.issue=https://github.com/MatteoBasili/Test19102021/issues
 
 sonar.host.url=https://sonarcloud.io
 sonar.organization=MatteoBasili-github
-sonar.login=TOKEN
+sonar.login=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
 sonar.sources=src
 sonar.language=java
 
