--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ sonar.links.issue=https://github.com/MatteoBasili/Test19102021/issues
 
 sonar.host.url=https://sonarcloud.io
 sonar.organization=MatteoBasili-github
-sonar.login=TOKEN
+sonar.login=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
 sonar.sources=src
 sonar.language=java
 
