--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ sonar.links.issue=https://github.com/MatteoBasili/Test19102021/issues
 
 sonar.host.url=https://sonarcloud.io
 sonar.organization=MatteoBasili-github
-sonar.login=TOKEN
+sonar.login=1b822ad581e26a6b628c3b73e21a38af1b6d8a73
 sonar.sources=src
 sonar.language=java
 
